fix: nvd3 tooltip bolding/non-linebreak on ONLY header row (#291)
* fix: adds class to header row, now used in css

* fix: legend-header is now tooltip-header

* style: prettier

--- a/superset-frontend/temporary_superset_ui/superset-ui/plugins/superset-ui-plugins/packages/superset-ui-legacy-preset-chart-nvd3/src/NVD3Vis.css
+++ b/superset-frontend/temporary_superset_ui/superset-ui/plugins/superset-ui-plugins/packages/superset-ui-legacy-preset-chart-nvd3/src/NVD3Vis.css
@@ -140,11 +140,11 @@
 }
 
 /* START tooltip styles - these prevent long column names from overflowing the tooltip */
-.nvtooltip tbody tr:first-child td {
+.nvtooltip .tooltip-header {
   white-space: nowrap;
   font-weight: bold;
 }
-.nvtooltip tbody tr:not(:first-child) td:nth-child(2) {
+.nvtooltip tbody tr:not(.tooltip-header) td:nth-child(2) {
   word-break: break-word;
 }
 /* END tooltip styles */
